--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Erlin Córdoba</h1>
+ <header class="header">
+        <div class="logo">
+            <h1>Erlin Córdoba</h1>
+        </div>
+        
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home">Principal</a></li>
+                <li><a href="#about">Sobre Mí</a></li>
+                <li><a href="#projects">Proyectos</a></li>
+                <li><a href="#contact">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+ <section class="hero" id="home">
+        <div class="hero-content">
+            <h2>Diseñador & Desarrollador</h2>
+            <p>Erlin Antonio Córdoba Quintero</p>
+            <p>Estudiante de 3er
+                <br>año en ingeniería en sistemas en la UCN
+            </p>
+            <a href="#projects" class="btn">Ver Proyectos</a>
+        </div>
+        <!-- Imagen hero (agregar luego) -->
+        <div class="hero-image">
+            <img src="foto.jpg" alt="Imagen principal">
+        </div>
+    </section>
